@@ -434,4 +434,5 @@ $catpage: CategoryPage instance
 $content_actions: The array of content actions
 
 
-More hooks might be available but undocumented.
+More hooks might be available but undocumented, you can execute
+./maintenance/findhooks.php to find hidden one.
